# aether-contracts

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml  docker-compose.yml  requirements.txt  start.bat
.agent/skills/aether-contracts/: SKILL.md
.agent/skills/python-formalism/: SKILL.md
.agent/skills/python-windows-encoding/: SKILL.md
.agent/skills/rust-ml-edgecases/: SKILL.md
.agent/workflows/: aether-contracts.md  aether-docker-mvp.md
aether-epsilon-engine/engine/v1/backend/: main.py
aether-epsilon-engine/engine/v1/backend/inference/: tinygrad_kv.py
aether-epsilon-engine/engine/v2/backend/: main.py
aether-epsilon-engine/engine/v2/backend/tools/: filesystem.py
aether-quantum-vault/: Cargo.toml
aether-quantum-vault/src/: attention.rs  authenticity.rs  bot_filter.rs  escrow.rs  lib.rs  main.rs  milestone.rs  oracle.rs  pod_detector.rs  pricing.rs  types.rs
dashboard/: Dockerfile  package.json  tailwind.config.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
docs/: repository_status_workflow.md
scripts/: _write_api.py  _write_entrypoint.py  aether_api.py  download_model.sh  entrypoint.sh  launcher.py  simulate.py
